--- a/index.html
+++ b/index.html
@@ -4,296 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Tinos:wght@400;700&family=Roboto:wght@300;700&display=swap');
-
-        body {
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-            background-color: #FEFAE0;
-            font-family: 'Georgia', serif; /* Neat and readable font */
-        }
-
-        .container {
-            width: 100vw;
-            height: 100vh;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 1fr;
-            gap: 2px;
-            position: relative;
-        }
-
-        .section {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 1.5rem;
-            position: absolute;
-            cursor: pointer;
-            transition: top 0.6s ease, left 0.6s ease, width 0.6s ease, height 0.6s ease, transform 0.6s ease, opacity 0.6s ease, box-shadow 0.4s ease, border 0.4s ease;
-        }
-
-        .section:nth-child(1) {
-            top: 0;
-            left: 0;
-            width: calc(50% - 1px);
-            height: calc(50% - 1px);
-            background-color: #81b29a; /* Soft Olive */
-        }
-
-        .section:nth-child(2) {
-            top: 0;
-            left: calc(50% + 1px);
-            width: calc(50% - 1px);
-            height: calc(50% - 1px);
-            background-color: #52796f; /* Warm Sage */
-        }
-
-        .section:nth-child(3) {
-            top: calc(50% + 1px);
-            left: 0;
-            width: calc(50% - 1px);
-            height: calc(50% - 1px);
-            background-color: #6B8F71; /* Muted Fern */
-        }
-
-        .section:nth-child(4) {
-            top: calc(50% + 1px);
-            left: calc(50% + 1px);
-            width: calc(50% - 1px);
-            height: calc(50% - 1px);
-            background-color: #4A5E44; /* Deep Forest */
-        }
-
-        .section:hover:not(.active) {
-            transform: scale(1.02); /* Slightly enlarge */
-            transition: transform 0.4s ease, box-shadow 0.4s ease;
-            box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3); /* Add shadow effect */
-        }
-
-        .section:not(:hover) {
-            transform: scale(0.95);
-            opacity: 0.9;
-            transition: transform 0.4s ease, opacity 0.4s ease;
-        }
-
-        .section.active {
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 10;
-            transform: scale(1.1);
-            opacity: 1;
-        }
-
-        .section.active ~ .section {
-            pointer-events: none;
-            opacity: 0;
-        }
-
-        .section:nth-child(1).inactive {
-            transform: translate(-100%, -100%) scale(0.7);
-        }
-
-        .section:nth-child(2).inactive {
-            transform: translate(100%, -100%) scale(0.7);
-        }
-
-        .section:nth-child(3).inactive {
-            transform: translate(-100%, 100%) scale(0.7);
-        }
-
-        .section:nth-child(4).inactive {
-            transform: translate(100%, 100%) scale(0.7);
-        }
-
-        .inactive {
-            transition: transform 0.6s ease, opacity 0.6s ease;
-        }
-
-        .header {
-            font-size: 2rem;
-            text-align: center;
-            font-family: 'Tahoma', sans-serif;
-            pointer-events: none;
-        }
-
-        .section.active .header {
-            display: none;
-        }
-
-        .content {
-            opacity: 0;
-            transform: scale(0.9);
-            position: absolute;
-            text-align: left;
-            visibility: hidden;
-            transition: opacity 0.4s ease, transform 0.4s ease, visibility 0s linear 0.4s;
-        }
-
-        .section.active .content {
-            opacity: 1;
-            transform: scale(1);
-            visibility: visible;
-            transition: opacity 0.4s ease, transform 0.4s ease, visibility 0s;
-        }
-
-        .content-container {
-            max-width: 800px;
-            text-align: left;
-            padding: 20px;
-            background-color: #FEFAE0; /* Beige for content area */
-            border-radius: 10px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-
-        .content-container-about h1, .content-container-about h3 {
-            margin: 10px auto;
-            text-align: center;
-            color: #81b29a; /* Darker color for maximum contrast */
-        }
-
-        .content-container-about p, .content-container-about ul {
-            margin: 10px 0;
-            line-height: 1.6;
-            color: #81b29a; /* Darker text color for better readability */
-        }
-
-        .content-container-about {
-            background-color: #FEFAE0; /* Light beige for strong contrast */
-            border-radius: 10px;
-            padding: 40px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            max-width: 1000px; /* Limit the maximum width */
-            margin: 0 auto; /* Center the container */
-        }
-
-        .content-container-interests h1, .content-container-interests h3 {
-            margin: 10px auto;
-            text-align: center;
-            color: #52796f; /* Darker color for maximum contrast */
-        }
-
-        .content-container-interests p, .content-container-interests ul {
-            margin: 10px 0;
-            line-height: 1.6;
-            color: #52796f; /* Darker text color for better readability */
-        }
-
-        .content-container-interests {
-            background-color: #FEFAE0; /* Light beige for strong contrast */
-            border-radius: 10px;
-            padding: 40px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            max-width: 1000px; /* Limit the maximum width */
-            margin: 0 auto; /* Center the container */
-        }
-
-
-        .content-container ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .content-container ul li {
-            text-align: left;
-            margin: 5px 0;
-        }
-
-        .contact-container {
-            max-width: 1000px;
-            text-align: center;
-            padding: 40px;
-            background-color: #FEFAE0; /* Beige for content area */
-            border-radius: 10px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-
-        .contact-container h1 {
-            margin: 10px auto;
-            text-align: center;
-            color: #4A5E44; /* Deep Forest */
-            font-weight: bold; /* Ensure bold headers */
-        }
-
-        .contact-container p {
-            margin: 10px 0;
-            line-height: 1.6;
-            text-align: center;
-            color: #4A5E44; /* Text matches Deep Forest */
-        }
-
-        .contact-container a {
-            color: #4A5E44;
-            text-decoration: none;
-            font-weight: bold; /* Match the bold style */
-        }
-
-        .contact-container a:hover {
-            text-decoration: underline;
-        }
-
-        .projects-container {
-            max-width: 1000px;
-            padding: 40px;
-            background-color: #FEFAE0; /* Beige for content area */
-            border-radius: 10px;
-            display: grid;
-            grid-template-columns: 1fr auto 1fr; /* Define space for the divider */
-            align-items: start; /* Align content at the top */
-            gap: 40px; /* Adds spacing between content and the line */
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-
-        .projects-container .column {
-            display: flex;
-            flex-direction: column;
-            align-items: center; /* Center items horizontally */
-            padding: 0 20px; /* Add extra padding on the sides */
-        }
-
-        .projects-container .column h1 {
-            margin-bottom: 20px; /* Adds equal spacing below titles */
-            text-align: center;
-            color: #6B8F71; /* Restore deep forest color */
-            font-weight: bold; /* Ensure bold headers */
-        }
-
-        .projects-container ul {
-            margin: 0;
-            padding: 0;
-            list-style-type: none;
-            text-align: center;
-            width: 100%;
-        }
-
-        .projects-container ul li {
-            line-height: 1.6; /* Ensures consistent spacing between items */
-        }
-
-        .projects-container ul li a {
-            color: #6B8F71; /* Restore link color */
-            text-decoration: none; /* Remove underline from links */
-            font-weight: bold; /* Match the bold style */
-        }
-
-        .projects-container ul li a:hover {
-            text-decoration: underline; /* Add underline on hover */
-        }
-
-        .projects-container .divider {
-            background-color: #6B8F71; /* Deep Forest Green */
-            width: 2px;
-            height: 100%; /* Full height of the container */
-        }
-    </style>
+    <!-- Link to external CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -322,7 +34,7 @@
                         <li>I am interested in shows like Suits and Grey's Anatomy.</li>
                         <li>I like to stay active through weight training and working on achieving personal fitness goals.</li>
                         <li>Reading is one of my favorite activities; I like fantasy series such as A Song of Ice and Fire or The Dune Series.</li>
-                        <li>I like travelling to unique areas and also taking photographs. I have a collections of photos that I have taken around the world and any opportunity that I get to add to it, I certainly will!</li>
+                        <li>I like travelling to unique areas and also taking photographs. I have a collection of photos that I have taken around the world and any opportunity that I get to add to it, I certainly will!</li>
                     </ul>
                 </div>
             </div>
@@ -362,32 +74,7 @@
             </div>
         </div>
     </div>
-
-    <script>
-        function toggleActive(activeSection) {
-            const sections = document.querySelectorAll('.section');
-            const isActive = activeSection.classList.contains('active');
-
-            sections.forEach((section) => {
-                section.classList.remove('active', 'inactive');
-            });
-
-            if (!isActive) {
-                activeSection.classList.add('active');
-                sections.forEach((section) => {
-                    if (!section.classList.contains('active')) {
-                        section.classList.add('inactive');
-                    }
-                });
-            }
-        }
-
-        // Prevent clicks on all content containers from propagating
-        document.querySelectorAll('.content, .content-container, .projects-container, .contact-container').forEach(container => {
-            container.addEventListener('click', event => {
-                event.stopPropagation();
-            });
-        });
-    </script>
+    <!-- Link to external JS -->
+    <script src="script.js"></script>
 </body>
 </html>
