--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             align-items: center;
             overflow: hidden;
             background-color: #FEFAE0;
-            font-family: 'Georgia', serif; /* Neat and readable font */
+            font-family: 'Georgia', serif;
         }
 
         .container {
@@ -44,7 +44,7 @@
             left: 0;
             width: calc(50% - 1px);
             height: calc(50% - 1px);
-            background-color: #81b29a; /* Soft Olive */
+            background-color: #81b29a;
         }
 
         .section:nth-child(2) {
@@ -52,7 +52,7 @@
             left: calc(50% + 1px);
             width: calc(50% - 1px);
             height: calc(50% - 1px);
-            background-color: #52796f; /* Warm Sage */
+            background-color: #52796f;
         }
 
         .section:nth-child(3) {
@@ -60,7 +60,7 @@
             left: 0;
             width: calc(50% - 1px);
             height: calc(50% - 1px);
-            background-color: #6B8F71; /* Muted Fern */
+            background-color: #6B8F71;
         }
 
         .section:nth-child(4) {
@@ -68,13 +68,13 @@
             left: calc(50% + 1px);
             width: calc(50% - 1px);
             height: calc(50% - 1px);
-            background-color: #4A5E44; /* Deep Forest */
+            background-color: #4A5E44;
         }
 
         .section:hover:not(.active) {
-            transform: scale(1.02); /* Slightly enlarge */
+            transform: scale(1.02);
             transition: transform 0.4s ease, box-shadow 0.4s ease;
-            box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3); /* Add shadow effect */
+            box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3);
         }
 
         .section:not(:hover) {
@@ -149,7 +149,7 @@
             max-width: 800px;
             text-align: left;
             padding: 20px;
-            background-color: #FEFAE0; /* Beige for content area */
+            background-color: #FEFAE0;
             border-radius: 10px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
@@ -157,45 +157,44 @@
         .content-container-about h1, .content-container-about h3 {
             margin: 10px auto;
             text-align: center;
-            color: #81b29a; /* Darker color for maximum contrast */
+            color: #81b29a;
         }
 
         .content-container-about p, .content-container-about ul {
             margin: 10px 0;
             line-height: 1.6;
-            color: #81b29a; /* Darker text color for better readability */
+            color: #81b29a;
         }
 
         .content-container-about {
-            background-color: #FEFAE0; /* Light beige for strong contrast */
+            background-color: #FEFAE0;
             border-radius: 10px;
             padding: 40px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            max-width: 1000px; /* Limit the maximum width */
-            margin: 0 auto; /* Center the container */
+            max-width: 1000px;
+            margin: 0 auto;
         }
 
         .content-container-interests h1, .content-container-interests h3 {
             margin: 10px auto;
             text-align: center;
-            color: #52796f; /* Darker color for maximum contrast */
+            color: #52796f;
         }
 
         .content-container-interests p, .content-container-interests ul {
             margin: 10px 0;
             line-height: 1.6;
-            color: #52796f; /* Darker text color for better readability */
+            color: #52796f;
         }
 
         .content-container-interests {
-            background-color: #FEFAE0; /* Light beige for strong contrast */
+            background-color: #FEFAE0;
             border-radius: 10px;
             padding: 40px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            max-width: 1000px; /* Limit the maximum width */
-            margin: 0 auto; /* Center the container */
+            max-width: 1000px;
+            margin: 0 auto;
         }
-
 
         .content-container ul {
             list-style-type: none;
@@ -211,7 +210,7 @@
             max-width: 1000px;
             text-align: center;
             padding: 40px;
-            background-color: #FEFAE0; /* Beige for content area */
+            background-color: #FEFAE0;
             border-radius: 10px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
@@ -219,21 +218,21 @@
         .contact-container h1 {
             margin: 10px auto;
             text-align: center;
-            color: #4A5E44; /* Deep Forest */
-            font-weight: bold; /* Ensure bold headers */
+            color: #4A5E44;
+            font-weight: bold;
         }
 
         .contact-container p {
             margin: 10px 0;
             line-height: 1.6;
             text-align: center;
-            color: #4A5E44; /* Text matches Deep Forest */
+            color: #4A5E44;
         }
 
         .contact-container a {
             color: #4A5E44;
             text-decoration: none;
-            font-weight: bold; /* Match the bold style */
+            font-weight: bold;
         }
 
         .contact-container a:hover {
@@ -243,27 +242,27 @@
         .projects-container {
             max-width: 1000px;
             padding: 40px;
-            background-color: #FEFAE0; /* Beige for content area */
+            background-color: #FEFAE0;
             border-radius: 10px;
             display: grid;
-            grid-template-columns: 1fr auto 1fr; /* Define space for the divider */
-            align-items: start; /* Align content at the top */
-            gap: 40px; /* Adds spacing between content and the line */
+            grid-template-columns: 1fr auto 1fr;
+            align-items: start;
+            gap: 40px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
 
         .projects-container .column {
             display: flex;
             flex-direction: column;
-            align-items: center; /* Center items horizontally */
-            padding: 0 20px; /* Add extra padding on the sides */
+            align-items: center;
+            padding: 0 20px;
         }
 
         .projects-container .column h1 {
-            margin-bottom: 20px; /* Adds equal spacing below titles */
+            margin-bottom: 20px;
             text-align: center;
-            color: #6B8F71; /* Restore deep forest color */
-            font-weight: bold; /* Ensure bold headers */
+            color: #6B8F71;
+            font-weight: bold;
         }
 
         .projects-container ul {
@@ -275,23 +274,23 @@
         }
 
         .projects-container ul li {
-            line-height: 1.6; /* Ensures consistent spacing between items */
+            line-height: 1.6;
         }
 
         .projects-container ul li a {
-            color: #6B8F71; /* Restore link color */
-            text-decoration: none; /* Remove underline from links */
-            font-weight: bold; /* Match the bold style */
+            color: #6B8F71;
+            text-decoration: none;
+            font-weight: bold;
         }
 
         .projects-container ul li a:hover {
-            text-decoration: underline; /* Add underline on hover */
+            text-decoration: underline;
         }
 
         .projects-container .divider {
-            background-color: #6B8F71; /* Deep Forest Green */
+            background-color: #6B8F71;
             width: 2px;
-            height: 100%; /* Full height of the container */
+            height: 100%;
         }
     </style>
 </head>
@@ -382,7 +381,6 @@
             }
         }
 
-        // Prevent clicks on all content containers from propagating
         document.querySelectorAll('.content, .content-container, .projects-container, .contact-container').forEach(container => {
             container.addEventListener('click', event => {
                 event.stopPropagation();
