--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             align-items: center;
             justify-content: center;
             color: white;
-            font-size: 1.5rem;
+            font-size: 1.5vw;
             position: absolute;
             cursor: pointer;
-            transition: top 0.6s ease, left 0.6s ease, width 0.6s ease, height 0.6s ease, transform 0.6s ease, opacity 0.6s ease, box-shadow 0.4s ease, border 0.4s ease;
+            transition: all 0.6s ease;
         }
 
         .section:nth-child(1) {
@@ -71,10 +71,10 @@
             background-color: #4A5E44;
         }
 
-        .section:hover:not(.active) {
-            transform: scale(1.02);
-            transition: transform 0.4s ease, box-shadow 0.4s ease;
-            box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3);
+        .section:not(:hover) {
+            transform: scale(0.95);
+            opacity: 0.9;
+            transition: transform 0.4s ease, opacity 0.4s ease;
         }
 
         .section:not(:hover) {
@@ -146,12 +146,14 @@
         }
 
         .content-container {
-            max-width: 800px;
+            max-width: 70vw;
+            padding: 1.5vw;
             text-align: left;
-            padding: 20px;
             background-color: #FEFAE0;
-            border-radius: 10px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            border-radius: 1vw;
+            box-shadow: 0 0.8vw 1.6vw rgba(0, 0, 0, 0.2);
+            overflow-y: auto;
+            max-height: 50vh;
         }
 
         .content-container-about h1, .content-container-about h3 {
@@ -354,8 +356,8 @@
             <div class="content">
                 <div class="contact-container">
                     <h1>Contact/Find Me</h1>
-                    <p>Email: <a href="mailto:deeleebee07@gmail.com">deeleebee07@gmail.com</a></p>
-                    <p>LinkedIn: <a href="https://www.linkedin.com" target="_blank">My LinkedIn Profile</a></p>
+                    <p>Email: <a href="mailto:dilibi07@gmail.com">dilibi07@gmail.com</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/derek-lin-b0831a306/" target="_blank">My LinkedIn Profile</a></p>
                     <p>GitHub: <a href="https://github.com/DLin-beep" target="_blank">My GitHub</a></p>
                 </div>
             </div>
