--- a/index.html
+++ b/index.html
@@ -294,6 +294,38 @@
             width: 2px;
             height: 100%;
         }
+
+        @media (max-width: 768px) {
+            .content-container-about, 
+            .content-container-interests, 
+            .contact-container, 
+            .projects-container {
+                font-size: 1.2rem;
+                line-height: 1.8;
+            }
+
+            .content-container-about h1, 
+            .content-container-interests h1, 
+            .contact-container h1, 
+            .projects-container .column h1 {
+                font-size: 1.5rem;
+            }
+
+            .content-container-about ul li, 
+            .content-container-interests ul li, 
+            .projects-container ul li {
+                font-size: 1.1rem;
+            }
+
+            .projects-container {
+                max-width: 90vw;
+            }
+
+            .content-container {
+                padding: 1rem;
+            }
+        }
+
     </style>
 </head>
 <body>
