--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Tinos:wght@400;700&family=Roboto:wght@300;700&display=swap');
 
         body {
             margin: 0;
@@ -14,8 +14,14 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            background-color: #FEFAE0;
-            font-family: 'Georgia', serif;
+            background-color: #FEFAE0
+        }
+
+        .content-container-about,
+        .content-container-interests,
+        .contact-container,
+        .projects-container {
+            font-family: 'Poppins', sans-serif;
         }
 
         .container {
