--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
 
         body {
@@ -14,14 +13,8 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            background-color: #FEFAE0
-        }
-
-        .content-container-about,
-        .content-container-interests,
-        .contact-container,
-        .projects-container {
-            font-family: 'Poppins', sans-serif;
+            background-color: #FEFAE0;
+            font-family: 'Georgia', serif;
         }
 
         .container {
@@ -363,7 +356,7 @@
                 <div class="contact-container">
                     <h1>Contact/Find Me</h1>
                     <p>Email: <a href="mailto:dilibi07@gmail.com">dilibi07@gmail.com</a></p>
-                    <p>LinkedIn: <a href="https://www.linkedin.com/in/derek-lin-b0831a306/" target="_blank">My LinkedIn Profile</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/dereklin-b0831a306/" target="_blank">My LinkedIn Profile</a></p>
                     <p>GitHub: <a href="https://github.com/DLin-beep" target="_blank">My GitHub</a></p>
                 </div>
             </div>
