--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         }
 
         .projects-container {
-            max-width: 1000px;
+            max-width: 1200px;
             padding: 40px;
             background-color: #FEFAE0;
             border-radius: 10px;
@@ -334,9 +334,9 @@
                     <div class="column">
                         <h1>Projects</h1>
                         <ul>
-                            <li><a href="https://linka.wtv" target="_blank">Project A</a></li>
-                            <li><a href="https://linkb.wtv" target="_blank">Project B</a></li>
-                            <li><a href="https://linkc.wtv" target="_blank">Project C</a></li>
+                            <li><a href="https://github.com/DLin-beep/Sudoku-Project" target="_blank">Sudoku Project</a></li>
+                            <li><a href="https://github.com/DLin-beep/GBM-Simulation" target="_blank">GBM Simulation</a></li>
+                            <li><a href="https://github.com/DLin-beep/LSTM-and-RFM-Model" target="_blank">LSTM and RFM Model</a></li>
                         </ul>
                     </div>
                     <div class="divider"></div>
