--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
                     <div class="column">
                         <h1>Certifications</h1>
                         <ul>
-                            <li><a href="https://linkd.wtv" target="_blank">Certification A</a></li>
-                            <li><a href="https://linke.wtv" target="_blank">Certification B</a></li>
+                            <li><a href="https://linkd.wtv" target="_blank">temporary placeholder</a></li>
+                            <li><a href="https://linke.wtv" target="_blank">temporary placeholder</a></li>
                         </ul>
                     </div>
                 </div>
@@ -356,7 +356,7 @@
                 <div class="contact-container">
                     <h1>Contact/Find Me</h1>
                     <p>Email: <a href="mailto:dilibi07@gmail.com">dilibi07@gmail.com</a></p>
-                    <p>LinkedIn: <a href="https://www.linkedin.com/in/dereklin-b0831a306/" target="_blank">My LinkedIn Profile</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/derek-lin-b0831a306/" target="_blank">My LinkedIn Profile</a></p>
                     <p>GitHub: <a href="https://github.com/DLin-beep" target="_blank">My GitHub</a></p>
                 </div>
             </div>
